// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dbux-babel-plugin allFunctionTypes.es5.js: allFunctionTypes.es5.js 1`] = `
"
function f1() {

}

const f2 = function _f2() {

};

const f3 = () => {

};

const o = {
  f4() {},
  f5: () => {}
};

class C {
  constructor() {}
  f6() {}
  f7 = () => {};
}

// // generator function
// function *f8() {
//   yield 1;
//   yield 2;
// }

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _dbuxRuntime = require('dbux-runtime')[\\"default\\"];

var _dbux = _dbux_init(_dbuxRuntime);

var _contextId = _dbux.getProgramContextId();

try {
  var f1 = function f1() {
    var _contextId2 = _dbux.pushImmediate(2);

    try {} finally {
      _dbux.popImmediate(_contextId2);
    }
  };

  var f2 = function _f2() {
    var _contextId3 = _dbux.pushImmediate(3);

    try {} finally {
      _dbux.popImmediate(_contextId3);
    }
  };

  var f3 = function f3() {
    var _contextId4 = _dbux.pushImmediate(4);

    try {} finally {
      _dbux.popImmediate(_contextId4);
    }
  };

  var o = {
    f4: function f4() {
      var _contextId5 = _dbux.pushImmediate(5);

      try {} finally {
        _dbux.popImmediate(_contextId5);
      }
    },
    f5: function f5() {
      var _contextId6 = _dbux.pushImmediate(6);

      try {} finally {
        _dbux.popImmediate(_contextId6);
      }
    }
  };

  var C =
  /*#__PURE__*/
  function () {
    function C() {
      this.f7 = function () {
        var _contextId9 = _dbux.pushImmediate(9);

        try {} finally {
          _dbux.popImmediate(_contextId9);
        }
      };

      var _contextId7 = _dbux.pushImmediate(7);

      try {} finally {
        _dbux.popImmediate(_contextId7);
      }
    }

    var _proto = C.prototype;

    _proto.f6 = function f6() {
      var _contextId8 = _dbux.pushImmediate(8);

      try {} finally {
        _dbux.popImmediate(_contextId8);
      }
    };

    return C;
  }(); // // generator function
  // function *f8() {
  //   yield 1;
  //   yield 2;
  // }

} finally {
  _dbux.popProgram();
}

function _dbux_init(dbuxRuntime) {
  return dbuxRuntime.initProgram({
    \\"fileName\\": \\"allFunctionTypes.js\\",
    \\"filePath\\": \\"samples/__samplesInput__/allFunctionTypes.js\\",
    \\"staticContexts\\": [null, {
      \\"staticId\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 28,
          \\"column\\": 4
        }
      },
      \\"type\\": 1,
      \\"name\\": \\"Program\\",
      \\"displayName\\": \\"Program\\"
    }, {
      \\"staticId\\": 2,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 3,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f1\\",
      \\"displayName\\": \\"f1\\"
    }, {
      \\"staticId\\": 3,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 5,
          \\"column\\": 11
        },
        \\"end\\": {
          \\"line\\": 7,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"_f2\\",
      \\"displayName\\": \\"_f2\\"
    }, {
      \\"staticId\\": 4,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 9,
          \\"column\\": 11
        },
        \\"end\\": {
          \\"line\\": 11,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f3\\",
      \\"displayName\\": \\"f3\\"
    }, {
      \\"staticId\\": 5,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 14,
          \\"column\\": 2
        },
        \\"end\\": {
          \\"line\\": 14,
          \\"column\\": 9
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f4\\",
      \\"displayName\\": \\"f4\\"
    }, {
      \\"staticId\\": 6,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 15,
          \\"column\\": 6
        },
        \\"end\\": {
          \\"line\\": 15,
          \\"column\\": 14
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f5\\",
      \\"displayName\\": \\"f5\\"
    }, {
      \\"staticId\\": 7,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 19,
          \\"column\\": 2
        },
        \\"end\\": {
          \\"line\\": 19,
          \\"column\\": 18
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"constructor\\",
      \\"displayName\\": \\"C.constructor\\"
    }, {
      \\"staticId\\": 8,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 20,
          \\"column\\": 2
        },
        \\"end\\": {
          \\"line\\": 20,
          \\"column\\": 9
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f6\\",
      \\"displayName\\": \\"C.f6\\"
    }, {
      \\"staticId\\": 9,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 21,
          \\"column\\": 7
        },
        \\"end\\": {
          \\"line\\": 21,
          \\"column\\": 15
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f7\\",
      \\"displayName\\": \\"C.f7\\"
    }]
  });
}
"
`;

exports[`dbux-babel-plugin allFunctionTypes.esNext.js: allFunctionTypes.esNext.js 1`] = `
"
function f1() {

}

const f2 = function _f2() {

};

const f3 = () => {

};

const o = {
  f4() {},
  f5: () => {}
};

class C {
  constructor() {}
  f6() {}
  f7 = () => {};
}

// // generator function
// function *f8() {
//   yield 1;
//   yield 2;
// }

      ↓ ↓ ↓ ↓ ↓ ↓

const _dbuxRuntime = require('dbux-runtime').default;

const _dbux = _dbux_init(_dbuxRuntime);

const _contextId = _dbux.getProgramContextId();

try {
  function f1() {
    const _contextId2 = _dbux.pushImmediate(2);

    try {} finally {
      _dbux.popImmediate(_contextId2);
    }
  }

  const f2 = function _f2() {
    const _contextId3 = _dbux.pushImmediate(3);

    try {} finally {
      _dbux.popImmediate(_contextId3);
    }
  };

  const f3 = () => {
    const _contextId4 = _dbux.pushImmediate(4);

    try {} finally {
      _dbux.popImmediate(_contextId4);
    }
  };

  const o = {
    f4() {
      const _contextId5 = _dbux.pushImmediate(5);

      try {} finally {
        _dbux.popImmediate(_contextId5);
      }
    },

    f5: () => {
      const _contextId6 = _dbux.pushImmediate(6);

      try {} finally {
        _dbux.popImmediate(_contextId6);
      }
    }
  };

  class C {
    constructor() {
      this.f7 = () => {
        const _contextId9 = _dbux.pushImmediate(9);

        try {} finally {
          _dbux.popImmediate(_contextId9);
        }
      };

      const _contextId7 = _dbux.pushImmediate(7);

      try {} finally {
        _dbux.popImmediate(_contextId7);
      }
    }

    f6() {
      const _contextId8 = _dbux.pushImmediate(8);

      try {} finally {
        _dbux.popImmediate(_contextId8);
      }
    }

  } // // generator function
  // function *f8() {
  //   yield 1;
  //   yield 2;
  // }

} finally {
  _dbux.popProgram();
}

function _dbux_init(dbuxRuntime) {
  return dbuxRuntime.initProgram({
    \\"fileName\\": \\"allFunctionTypes.js\\",
    \\"filePath\\": \\"samples/__samplesInput__/allFunctionTypes.js\\",
    \\"staticContexts\\": [null, {
      \\"staticId\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 28,
          \\"column\\": 4
        }
      },
      \\"type\\": 1,
      \\"name\\": \\"Program\\",
      \\"displayName\\": \\"Program\\"
    }, {
      \\"staticId\\": 2,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 3,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f1\\",
      \\"displayName\\": \\"f1\\"
    }, {
      \\"staticId\\": 3,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 5,
          \\"column\\": 11
        },
        \\"end\\": {
          \\"line\\": 7,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"_f2\\",
      \\"displayName\\": \\"_f2\\"
    }, {
      \\"staticId\\": 4,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 9,
          \\"column\\": 11
        },
        \\"end\\": {
          \\"line\\": 11,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f3\\",
      \\"displayName\\": \\"f3\\"
    }, {
      \\"staticId\\": 5,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 14,
          \\"column\\": 2
        },
        \\"end\\": {
          \\"line\\": 14,
          \\"column\\": 9
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f4\\",
      \\"displayName\\": \\"f4\\"
    }, {
      \\"staticId\\": 6,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 15,
          \\"column\\": 6
        },
        \\"end\\": {
          \\"line\\": 15,
          \\"column\\": 14
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f5\\",
      \\"displayName\\": \\"f5\\"
    }, {
      \\"staticId\\": 7,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 19,
          \\"column\\": 2
        },
        \\"end\\": {
          \\"line\\": 19,
          \\"column\\": 18
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"constructor\\",
      \\"displayName\\": \\"C.constructor\\"
    }, {
      \\"staticId\\": 8,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 20,
          \\"column\\": 2
        },
        \\"end\\": {
          \\"line\\": 20,
          \\"column\\": 9
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f6\\",
      \\"displayName\\": \\"C.f6\\"
    }, {
      \\"staticId\\": 9,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 21,
          \\"column\\": 7
        },
        \\"end\\": {
          \\"line\\": 21,
          \\"column\\": 15
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f7\\",
      \\"displayName\\": \\"C.f7\\"
    }]
  });
}
"
`;

exports[`dbux-babel-plugin async-example1.es5.js: async-example1.es5.js 1`] = `
"
function f0() {  
}

async function af1(a) {
  return Promise.resolve(a);
}

async function af2() {
  await af1(1);
  await af1(2);

  return 2 + await af1(3) - 3;
}

async function af33(delay) {
  return new Promise(r => {
    setTimeout(r.bind(33), delay);
  });
}

async function af44() {
  const a = await af33(100);
  const b = await af33(50);

  return a+b + af33(10);
}

(async function main() {
  console.log(
    await Promise.all([
      af2(),
      af44()
    ])
  );

  f0();
})();

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

require(\\"core-js/modules/es.array.iterator\\");

require(\\"core-js/modules/es.function.bind\\");

require(\\"core-js/modules/es.object.to-string\\");

require(\\"core-js/modules/es.promise\\");

require(\\"core-js/modules/es.string.iterator\\");

require(\\"core-js/modules/web.dom-collections.iterator\\");

require(\\"core-js/modules/web.timers\\");

require(\\"regenerator-runtime/runtime\\");

var _dbuxRuntime = require('dbux-runtime')[\\"default\\"];

var _dbux = _dbux_init(_dbuxRuntime);

var _contextId = _dbux.getProgramContextId();

try {
  var f0 = function f0() {
    var _contextId2 = _dbux.pushImmediate(2);

    try {} finally {
      _dbux.popImmediate(_contextId2);
    }
  };

  var af1 = function af1(a) {
    var _contextId3;

    return regeneratorRuntime.async(function af1$(_context) {
      while (1) {
        switch (_context.prev = _context.next) {
          case 0:
            _contextId3 = _dbux.pushImmediate(3);
            _context.prev = 1;
            return _context.abrupt(\\"return\\", Promise.resolve(a));

          case 3:
            _context.prev = 3;

            _dbux.popImmediate(_contextId3);

            return _context.finish(3);

          case 6:
          case \\"end\\":
            return _context.stop();
        }
      }
    }, null, null, [[1,, 3, 6]]);
  };

  var af2 = function af2() {
    var _contextId4, _awaitContextId, _awaitContextId2, _awaitContextId3;

    return regeneratorRuntime.async(function af2$(_context2) {
      while (1) {
        switch (_context2.prev = _context2.next) {
          case 0:
            _contextId4 = _dbux.pushImmediate(4);
            _context2.prev = 1;
            _context2.t0 = _dbux;
            _context2.t1 = _awaitContextId;
            _context2.next = 6;
            return regeneratorRuntime.awrap(_awaitContextId = _dbux.preAwait(5, af1(1)));

          case 6:
            _context2.t2 = _context2.sent;

            _context2.t0.postAwait.call(_context2.t0, _context2.t1, _context2.t2);

            _context2.t3 = _dbux;
            _context2.t4 = _awaitContextId2;
            _context2.next = 12;
            return regeneratorRuntime.awrap(_awaitContextId2 = _dbux.preAwait(6, af1(2)));

          case 12:
            _context2.t5 = _context2.sent;

            _context2.t3.postAwait.call(_context2.t3, _context2.t4, _context2.t5);

            _context2.t6 = _dbux;
            _context2.t7 = _awaitContextId3;
            _context2.next = 18;
            return regeneratorRuntime.awrap(_awaitContextId3 = _dbux.preAwait(7, af1(3)));

          case 18:
            _context2.t8 = _context2.sent;
            _context2.t9 = _context2.t6.postAwait.call(_context2.t6, _context2.t7, _context2.t8);
            _context2.t10 = 2 + _context2.t9;
            return _context2.abrupt(\\"return\\", _context2.t10 - 3);

          case 22:
            _context2.prev = 22;

            _dbux.popImmediate(_contextId4);

            return _context2.finish(22);

          case 25:
          case \\"end\\":
            return _context2.stop();
        }
      }
    }, null, null, [[1,, 22, 25]]);
  };

  var af33 = function af33(delay) {
    var _contextId5;

    return regeneratorRuntime.async(function af33$(_context3) {
      while (1) {
        switch (_context3.prev = _context3.next) {
          case 0:
            _contextId5 = _dbux.pushImmediate(8);
            _context3.prev = 1;
            return _context3.abrupt(\\"return\\", new Promise(function (r) {
              var _contextId6 = _dbux.pushImmediate(9);

              try {
                setTimeout(_dbux.scheduleCallback(10, _contextId6, r.bind(33)), delay);
              } finally {
                _dbux.popImmediate(_contextId6);
              }
            }));

          case 3:
            _context3.prev = 3;

            _dbux.popImmediate(_contextId5);

            return _context3.finish(3);

          case 6:
          case \\"end\\":
            return _context3.stop();
        }
      }
    }, null, null, [[1,, 3, 6]]);
  };

  var af44 = function af44() {
    var _contextId7, _awaitContextId4, _awaitContextId5, a, b;

    return regeneratorRuntime.async(function af44$(_context4) {
      while (1) {
        switch (_context4.prev = _context4.next) {
          case 0:
            _contextId7 = _dbux.pushImmediate(11);
            _context4.prev = 1;
            _context4.t0 = _dbux;
            _context4.t1 = _awaitContextId4;
            _context4.next = 6;
            return regeneratorRuntime.awrap(_awaitContextId4 = _dbux.preAwait(12, af33(100)));

          case 6:
            _context4.t2 = _context4.sent;
            a = _context4.t0.postAwait.call(_context4.t0, _context4.t1, _context4.t2);
            _context4.t3 = _dbux;
            _context4.t4 = _awaitContextId5;
            _context4.next = 12;
            return regeneratorRuntime.awrap(_awaitContextId5 = _dbux.preAwait(13, af33(50)));

          case 12:
            _context4.t5 = _context4.sent;
            b = _context4.t3.postAwait.call(_context4.t3, _context4.t4, _context4.t5);
            return _context4.abrupt(\\"return\\", a + b + af33(10));

          case 15:
            _context4.prev = 15;

            _dbux.popImmediate(_contextId7);

            return _context4.finish(15);

          case 18:
          case \\"end\\":
            return _context4.stop();
        }
      }
    }, null, null, [[1,, 15, 18]]);
  };

  (function main() {
    var _contextId8, _awaitContextId6;

    return regeneratorRuntime.async(function main$(_context5) {
      while (1) {
        switch (_context5.prev = _context5.next) {
          case 0:
            _contextId8 = _dbux.pushImmediate(14);
            _context5.prev = 1;
            _context5.t0 = console;
            _context5.t1 = _dbux;
            _context5.t2 = _awaitContextId6;
            _context5.next = 7;
            return regeneratorRuntime.awrap(_awaitContextId6 = _dbux.preAwait(15, Promise.all([af2(), af44()])));

          case 7:
            _context5.t3 = _context5.sent;
            _context5.t4 = _context5.t1.postAwait.call(_context5.t1, _context5.t2, _context5.t3);

            _context5.t0.log.call(_context5.t0, _context5.t4);

            f0();

          case 11:
            _context5.prev = 11;

            _dbux.popImmediate(_contextId8);

            return _context5.finish(11);

          case 14:
          case \\"end\\":
            return _context5.stop();
        }
      }
    }, null, null, [[1,, 11, 14]]);
  })();
} finally {
  _dbux.popProgram();
}

function _dbux_init(dbuxRuntime) {
  return dbuxRuntime.initProgram({
    \\"fileName\\": \\"async-example1.js\\",
    \\"filePath\\": \\"samples/__samplesInput__/async-example1.js\\",
    \\"staticContexts\\": [null, {
      \\"staticId\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 37,
          \\"column\\": 5
        }
      },
      \\"type\\": 1,
      \\"name\\": \\"Program\\",
      \\"displayName\\": \\"Program\\"
    }, {
      \\"staticId\\": 2,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 2,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f0\\",
      \\"displayName\\": \\"f0\\"
    }, {
      \\"staticId\\": 3,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 4,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 6,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"af1\\",
      \\"displayName\\": \\"af1\\"
    }, {
      \\"staticId\\": 4,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 8,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 13,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"af2\\",
      \\"displayName\\": \\"af2\\"
    }, {
      \\"staticId\\": 5,
      \\"parent\\": 4,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 9,
          \\"column\\": 2
        },
        \\"end\\": {
          \\"line\\": 9,
          \\"column\\": 14
        }
      },
      \\"type\\": 4,
      \\"displayName\\": \\"(await af1(1))\\"
    }, {
      \\"staticId\\": 6,
      \\"parent\\": 4,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 10,
          \\"column\\": 2
        },
        \\"end\\": {
          \\"line\\": 10,
          \\"column\\": 14
        }
      },
      \\"type\\": 4,
      \\"displayName\\": \\"(await af1(2))\\"
    }, {
      \\"staticId\\": 7,
      \\"parent\\": 4,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 12,
          \\"column\\": 13
        },
        \\"end\\": {
          \\"line\\": 12,
          \\"column\\": 25
        }
      },
      \\"type\\": 4,
      \\"displayName\\": \\"(await af1(3))\\"
    }, {
      \\"staticId\\": 8,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 15,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 19,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"af33\\",
      \\"displayName\\": \\"af33\\"
    }, {
      \\"staticId\\": 9,
      \\"parent\\": 8,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 16,
          \\"column\\": 21
        },
        \\"end\\": {
          \\"line\\": 18,
          \\"column\\": 3
        }
      },
      \\"type\\": 2,
      \\"displayName\\": \\"(anonymous)\\"
    }, {
      \\"staticId\\": 10,
      \\"parent\\": 9,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 17,
          \\"column\\": 15
        },
        \\"end\\": {
          \\"line\\": 17,
          \\"column\\": 25
        }
      },
      \\"type\\": 3,
      \\"displayName\\": \\"(r.bind(33))\\"
    }, {
      \\"staticId\\": 11,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 21,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 26,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"af44\\",
      \\"displayName\\": \\"af44\\"
    }, {
      \\"staticId\\": 12,
      \\"parent\\": 11,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 22,
          \\"column\\": 12
        },
        \\"end\\": {
          \\"line\\": 22,
          \\"column\\": 27
        }
      },
      \\"type\\": 4,
      \\"displayName\\": \\"(await af33(100))\\"
    }, {
      \\"staticId\\": 13,
      \\"parent\\": 11,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 23,
          \\"column\\": 12
        },
        \\"end\\": {
          \\"line\\": 23,
          \\"column\\": 26
        }
      },
      \\"type\\": 4,
      \\"displayName\\": \\"(await af33(50))\\"
    }, {
      \\"staticId\\": 14,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 28,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 37,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"main\\",
      \\"displayName\\": \\"main\\"
    }, {
      \\"staticId\\": 15,
      \\"parent\\": 14,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 30,
          \\"column\\": 4
        },
        \\"end\\": {
          \\"line\\": 33,
          \\"column\\": 6
        }
      },
      \\"type\\": 4,
      \\"displayName\\": \\"(await Promise.all([af2(), a...)\\"
    }]
  });
}
"
`;

exports[`dbux-babel-plugin async-example1.esNext.js: async-example1.esNext.js 1`] = `
"
function f0() {  
}

async function af1(a) {
  return Promise.resolve(a);
}

async function af2() {
  await af1(1);
  await af1(2);

  return 2 + await af1(3) - 3;
}

async function af33(delay) {
  return new Promise(r => {
    setTimeout(r.bind(33), delay);
  });
}

async function af44() {
  const a = await af33(100);
  const b = await af33(50);

  return a+b + af33(10);
}

(async function main() {
  console.log(
    await Promise.all([
      af2(),
      af44()
    ])
  );

  f0();
})();

      ↓ ↓ ↓ ↓ ↓ ↓

const _dbuxRuntime = require('dbux-runtime').default;

const _dbux = _dbux_init(_dbuxRuntime);

const _contextId = _dbux.getProgramContextId();

try {
  function f0() {
    const _contextId2 = _dbux.pushImmediate(2);

    try {} finally {
      _dbux.popImmediate(_contextId2);
    }
  }

  async function af1(a) {
    const _contextId3 = _dbux.pushImmediate(3);

    try {
      return Promise.resolve(a);
    } finally {
      _dbux.popImmediate(_contextId3);
    }
  }

  async function af2() {
    const _contextId4 = _dbux.pushImmediate(4);

    try {
      var _awaitContextId, _awaitContextId2, _awaitContextId3;

      _dbux.postAwait(_awaitContextId, (await (_awaitContextId = _dbux.preAwait(5, af1(1)))));

      _dbux.postAwait(_awaitContextId2, (await (_awaitContextId2 = _dbux.preAwait(6, af1(2)))));

      return 2 + _dbux.postAwait(_awaitContextId3, (await (_awaitContextId3 = _dbux.preAwait(7, af1(3))))) - 3;
    } finally {
      _dbux.popImmediate(_contextId4);
    }
  }

  async function af33(delay) {
    const _contextId5 = _dbux.pushImmediate(8);

    try {
      return new Promise(r => {
        const _contextId6 = _dbux.pushImmediate(9);

        try {
          setTimeout(_dbux.scheduleCallback(10, _contextId6, r.bind(33)), delay);
        } finally {
          _dbux.popImmediate(_contextId6);
        }
      });
    } finally {
      _dbux.popImmediate(_contextId5);
    }
  }

  async function af44() {
    const _contextId7 = _dbux.pushImmediate(11);

    try {
      var _awaitContextId4, _awaitContextId5;

      const a = _dbux.postAwait(_awaitContextId4, (await (_awaitContextId4 = _dbux.preAwait(12, af33(100)))));

      const b = _dbux.postAwait(_awaitContextId5, (await (_awaitContextId5 = _dbux.preAwait(13, af33(50)))));

      return a + b + af33(10);
    } finally {
      _dbux.popImmediate(_contextId7);
    }
  }

  (async function main() {
    const _contextId8 = _dbux.pushImmediate(14);

    try {
      var _awaitContextId6;

      console.log(_dbux.postAwait(_awaitContextId6, (await (_awaitContextId6 = _dbux.preAwait(15, Promise.all([af2(), af44()]))))));
      f0();
    } finally {
      _dbux.popImmediate(_contextId8);
    }
  })();
} finally {
  _dbux.popProgram();
}

function _dbux_init(dbuxRuntime) {
  return dbuxRuntime.initProgram({
    \\"fileName\\": \\"async-example1.js\\",
    \\"filePath\\": \\"samples/__samplesInput__/async-example1.js\\",
    \\"staticContexts\\": [null, {
      \\"staticId\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 37,
          \\"column\\": 5
        }
      },
      \\"type\\": 1,
      \\"name\\": \\"Program\\",
      \\"displayName\\": \\"Program\\"
    }, {
      \\"staticId\\": 2,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 2,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f0\\",
      \\"displayName\\": \\"f0\\"
    }, {
      \\"staticId\\": 3,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 4,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 6,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"af1\\",
      \\"displayName\\": \\"af1\\"
    }, {
      \\"staticId\\": 4,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 8,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 13,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"af2\\",
      \\"displayName\\": \\"af2\\"
    }, {
      \\"staticId\\": 5,
      \\"parent\\": 4,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 9,
          \\"column\\": 2
        },
        \\"end\\": {
          \\"line\\": 9,
          \\"column\\": 14
        }
      },
      \\"type\\": 4,
      \\"displayName\\": \\"(await af1(1))\\"
    }, {
      \\"staticId\\": 6,
      \\"parent\\": 4,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 10,
          \\"column\\": 2
        },
        \\"end\\": {
          \\"line\\": 10,
          \\"column\\": 14
        }
      },
      \\"type\\": 4,
      \\"displayName\\": \\"(await af1(2))\\"
    }, {
      \\"staticId\\": 7,
      \\"parent\\": 4,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 12,
          \\"column\\": 13
        },
        \\"end\\": {
          \\"line\\": 12,
          \\"column\\": 25
        }
      },
      \\"type\\": 4,
      \\"displayName\\": \\"(await af1(3))\\"
    }, {
      \\"staticId\\": 8,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 15,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 19,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"af33\\",
      \\"displayName\\": \\"af33\\"
    }, {
      \\"staticId\\": 9,
      \\"parent\\": 8,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 16,
          \\"column\\": 21
        },
        \\"end\\": {
          \\"line\\": 18,
          \\"column\\": 3
        }
      },
      \\"type\\": 2,
      \\"displayName\\": \\"(anonymous)\\"
    }, {
      \\"staticId\\": 10,
      \\"parent\\": 9,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 17,
          \\"column\\": 15
        },
        \\"end\\": {
          \\"line\\": 17,
          \\"column\\": 25
        }
      },
      \\"type\\": 3,
      \\"displayName\\": \\"(r.bind(33))\\"
    }, {
      \\"staticId\\": 11,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 21,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 26,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"af44\\",
      \\"displayName\\": \\"af44\\"
    }, {
      \\"staticId\\": 12,
      \\"parent\\": 11,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 22,
          \\"column\\": 12
        },
        \\"end\\": {
          \\"line\\": 22,
          \\"column\\": 27
        }
      },
      \\"type\\": 4,
      \\"displayName\\": \\"(await af33(100))\\"
    }, {
      \\"staticId\\": 13,
      \\"parent\\": 11,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 23,
          \\"column\\": 12
        },
        \\"end\\": {
          \\"line\\": 23,
          \\"column\\": 26
        }
      },
      \\"type\\": 4,
      \\"displayName\\": \\"(await af33(50))\\"
    }, {
      \\"staticId\\": 14,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 28,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 37,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"main\\",
      \\"displayName\\": \\"main\\"
    }, {
      \\"staticId\\": 15,
      \\"parent\\": 14,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 30,
          \\"column\\": 4
        },
        \\"end\\": {
          \\"line\\": 33,
          \\"column\\": 6
        }
      },
      \\"type\\": 4,
      \\"displayName\\": \\"(await Promise.all([af2(), a...)\\"
    }]
  });
}
"
`;

exports[`dbux-babel-plugin await1.es5.js: await1.es5.js 1`] = `
"
async function sleep(ms) {
  return new Promise(r => setTimeout(r, ms));
}

function f1() {
  return sleep(50);
}

async function f2() {
  await sleep(50);
}

async function f3() {
  await sleep(200);
}

async function f4(...args) {
  await Promise.all(...args);
}

(async function main() {
  await f1();
  await f4(f2, f3, sleep.bind(null, 400));
})();

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

require(\\"core-js/modules/es.array.iterator\\");

require(\\"core-js/modules/es.function.bind\\");

require(\\"core-js/modules/es.object.to-string\\");

require(\\"core-js/modules/es.promise\\");

require(\\"core-js/modules/es.string.iterator\\");

require(\\"core-js/modules/web.dom-collections.iterator\\");

require(\\"core-js/modules/web.timers\\");

require(\\"regenerator-runtime/runtime\\");

var _dbuxRuntime = require('dbux-runtime')[\\"default\\"];

var _dbux = _dbux_init(_dbuxRuntime);

var _contextId = _dbux.getProgramContextId();

try {
  var sleep = function sleep(ms) {
    var _contextId2;

    return regeneratorRuntime.async(function sleep$(_context) {
      while (1) {
        switch (_context.prev = _context.next) {
          case 0:
            _contextId2 = _dbux.pushImmediate(2);
            _context.prev = 1;
            return _context.abrupt(\\"return\\", new Promise(function (r) {
              var _contextId3 = _dbux.pushImmediate(3);

              try {
                return setTimeout(_dbux.scheduleCallback(4, _contextId3, r), ms);
              } finally {
                _dbux.popImmediate(_contextId3);
              }
            }));

          case 3:
            _context.prev = 3;

            _dbux.popImmediate(_contextId2);

            return _context.finish(3);

          case 6:
          case \\"end\\":
            return _context.stop();
        }
      }
    }, null, null, [[1,, 3, 6]]);
  };

  var f1 = function f1() {
    var _contextId4 = _dbux.pushImmediate(5);

    try {
      return sleep(50);
    } finally {
      _dbux.popImmediate(_contextId4);
    }
  };

  var f2 = function f2() {
    var _contextId5, _awaitContextId;

    return regeneratorRuntime.async(function f2$(_context2) {
      while (1) {
        switch (_context2.prev = _context2.next) {
          case 0:
            _contextId5 = _dbux.pushImmediate(6);
            _context2.prev = 1;
            _context2.t0 = _dbux;
            _context2.t1 = _awaitContextId;
            _context2.next = 6;
            return regeneratorRuntime.awrap(_awaitContextId = _dbux.preAwait(7, sleep(50)));

          case 6:
            _context2.t2 = _context2.sent;

            _context2.t0.postAwait.call(_context2.t0, _context2.t1, _context2.t2);

          case 8:
            _context2.prev = 8;

            _dbux.popImmediate(_contextId5);

            return _context2.finish(8);

          case 11:
          case \\"end\\":
            return _context2.stop();
        }
      }
    }, null, null, [[1,, 8, 11]]);
  };

  var f3 = function f3() {
    var _contextId6, _awaitContextId2;

    return regeneratorRuntime.async(function f3$(_context3) {
      while (1) {
        switch (_context3.prev = _context3.next) {
          case 0:
            _contextId6 = _dbux.pushImmediate(8);
            _context3.prev = 1;
            _context3.t0 = _dbux;
            _context3.t1 = _awaitContextId2;
            _context3.next = 6;
            return regeneratorRuntime.awrap(_awaitContextId2 = _dbux.preAwait(9, sleep(200)));

          case 6:
            _context3.t2 = _context3.sent;

            _context3.t0.postAwait.call(_context3.t0, _context3.t1, _context3.t2);

          case 8:
            _context3.prev = 8;

            _dbux.popImmediate(_contextId6);

            return _context3.finish(8);

          case 11:
          case \\"end\\":
            return _context3.stop();
        }
      }
    }, null, null, [[1,, 8, 11]]);
  };

  var f4 = function f4() {
    var _contextId7,
        _awaitContextId3,
        _args4 = arguments;

    return regeneratorRuntime.async(function f4$(_context4) {
      while (1) {
        switch (_context4.prev = _context4.next) {
          case 0:
            _contextId7 = _dbux.pushImmediate(10);
            _context4.prev = 1;
            _context4.t0 = _dbux;
            _context4.t1 = _awaitContextId3;
            _context4.next = 6;
            return regeneratorRuntime.awrap(_awaitContextId3 = _dbux.preAwait(11, Promise.all.apply(Promise, _args4)));

          case 6:
            _context4.t2 = _context4.sent;

            _context4.t0.postAwait.call(_context4.t0, _context4.t1, _context4.t2);

          case 8:
            _context4.prev = 8;

            _dbux.popImmediate(_contextId7);

            return _context4.finish(8);

          case 11:
          case \\"end\\":
            return _context4.stop();
        }
      }
    }, null, null, [[1,, 8, 11]]);
  };

  (function main() {
    var _contextId8, _awaitContextId4, _awaitContextId5;

    return regeneratorRuntime.async(function main$(_context5) {
      while (1) {
        switch (_context5.prev = _context5.next) {
          case 0:
            _contextId8 = _dbux.pushImmediate(12);
            _context5.prev = 1;
            _context5.t0 = _dbux;
            _context5.t1 = _awaitContextId4;
            _context5.next = 6;
            return regeneratorRuntime.awrap(_awaitContextId4 = _dbux.preAwait(13, f1()));

          case 6:
            _context5.t2 = _context5.sent;

            _context5.t0.postAwait.call(_context5.t0, _context5.t1, _context5.t2);

            _context5.t3 = _dbux;
            _context5.t4 = _awaitContextId5;
            _context5.next = 12;
            return regeneratorRuntime.awrap(_awaitContextId5 = _dbux.preAwait(14, f4(f2, f3, sleep.bind(null, 400))));

          case 12:
            _context5.t5 = _context5.sent;

            _context5.t3.postAwait.call(_context5.t3, _context5.t4, _context5.t5);

          case 14:
            _context5.prev = 14;

            _dbux.popImmediate(_contextId8);

            return _context5.finish(14);

          case 17:
          case \\"end\\":
            return _context5.stop();
        }
      }
    }, null, null, [[1,, 14, 17]]);
  })();
} finally {
  _dbux.popProgram();
}

function _dbux_init(dbuxRuntime) {
  return dbuxRuntime.initProgram({
    \\"fileName\\": \\"await1.js\\",
    \\"filePath\\": \\"samples/__samplesInput__/await1.js\\",
    \\"staticContexts\\": [null, {
      \\"staticId\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 24,
          \\"column\\": 5
        }
      },
      \\"type\\": 1,
      \\"name\\": \\"Program\\",
      \\"displayName\\": \\"Program\\"
    }, {
      \\"staticId\\": 2,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 3,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"sleep\\",
      \\"displayName\\": \\"sleep\\"
    }, {
      \\"staticId\\": 3,
      \\"parent\\": 2,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 2,
          \\"column\\": 21
        },
        \\"end\\": {
          \\"line\\": 2,
          \\"column\\": 43
        }
      },
      \\"type\\": 2,
      \\"displayName\\": \\"(anonymous)\\"
    }, {
      \\"staticId\\": 4,
      \\"parent\\": 3,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 2,
          \\"column\\": 37
        },
        \\"end\\": {
          \\"line\\": 2,
          \\"column\\": 38
        },
        \\"identifierName\\": \\"r\\"
      },
      \\"type\\": 3,
      \\"displayName\\": \\"(r)\\"
    }, {
      \\"staticId\\": 5,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 5,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 7,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f1\\",
      \\"displayName\\": \\"f1\\"
    }, {
      \\"staticId\\": 6,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 9,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 11,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f2\\",
      \\"displayName\\": \\"f2\\"
    }, {
      \\"staticId\\": 7,
      \\"parent\\": 6,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 10,
          \\"column\\": 2
        },
        \\"end\\": {
          \\"line\\": 10,
          \\"column\\": 17
        }
      },
      \\"type\\": 4,
      \\"displayName\\": \\"(await sleep(50))\\"
    }, {
      \\"staticId\\": 8,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 13,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 15,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f3\\",
      \\"displayName\\": \\"f3\\"
    }, {
      \\"staticId\\": 9,
      \\"parent\\": 8,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 14,
          \\"column\\": 2
        },
        \\"end\\": {
          \\"line\\": 14,
          \\"column\\": 18
        }
      },
      \\"type\\": 4,
      \\"displayName\\": \\"(await sleep(200))\\"
    }, {
      \\"staticId\\": 10,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 17,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 19,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f4\\",
      \\"displayName\\": \\"f4\\"
    }, {
      \\"staticId\\": 11,
      \\"parent\\": 10,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 18,
          \\"column\\": 2
        },
        \\"end\\": {
          \\"line\\": 18,
          \\"column\\": 28
        }
      },
      \\"type\\": 4,
      \\"displayName\\": \\"(await Promise.all(...args))\\"
    }, {
      \\"staticId\\": 12,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 21,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 24,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"main\\",
      \\"displayName\\": \\"main\\"
    }, {
      \\"staticId\\": 13,
      \\"parent\\": 12,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 22,
          \\"column\\": 2
        },
        \\"end\\": {
          \\"line\\": 22,
          \\"column\\": 12
        }
      },
      \\"type\\": 4,
      \\"displayName\\": \\"(await f1())\\"
    }, {
      \\"staticId\\": 14,
      \\"parent\\": 12,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 23,
          \\"column\\": 2
        },
        \\"end\\": {
          \\"line\\": 23,
          \\"column\\": 41
        }
      },
      \\"type\\": 4,
      \\"displayName\\": \\"(await f4(f2, f3, sleep.bind...)\\"
    }]
  });
}
"
`;

exports[`dbux-babel-plugin await1.esNext.js: await1.esNext.js 1`] = `
"
async function sleep(ms) {
  return new Promise(r => setTimeout(r, ms));
}

function f1() {
  return sleep(50);
}

async function f2() {
  await sleep(50);
}

async function f3() {
  await sleep(200);
}

async function f4(...args) {
  await Promise.all(...args);
}

(async function main() {
  await f1();
  await f4(f2, f3, sleep.bind(null, 400));
})();

      ↓ ↓ ↓ ↓ ↓ ↓

const _dbuxRuntime = require('dbux-runtime').default;

const _dbux = _dbux_init(_dbuxRuntime);

const _contextId = _dbux.getProgramContextId();

try {
  async function sleep(ms) {
    const _contextId2 = _dbux.pushImmediate(2);

    try {
      return new Promise(r => {
        const _contextId3 = _dbux.pushImmediate(3);

        try {
          return setTimeout(_dbux.scheduleCallback(4, _contextId3, r), ms);
        } finally {
          _dbux.popImmediate(_contextId3);
        }
      });
    } finally {
      _dbux.popImmediate(_contextId2);
    }
  }

  function f1() {
    const _contextId4 = _dbux.pushImmediate(5);

    try {
      return sleep(50);
    } finally {
      _dbux.popImmediate(_contextId4);
    }
  }

  async function f2() {
    const _contextId5 = _dbux.pushImmediate(6);

    try {
      var _awaitContextId;

      _dbux.postAwait(_awaitContextId, (await (_awaitContextId = _dbux.preAwait(7, sleep(50)))));
    } finally {
      _dbux.popImmediate(_contextId5);
    }
  }

  async function f3() {
    const _contextId6 = _dbux.pushImmediate(8);

    try {
      var _awaitContextId2;

      _dbux.postAwait(_awaitContextId2, (await (_awaitContextId2 = _dbux.preAwait(9, sleep(200)))));
    } finally {
      _dbux.popImmediate(_contextId6);
    }
  }

  async function f4(...args) {
    const _contextId7 = _dbux.pushImmediate(10);

    try {
      var _awaitContextId3;

      _dbux.postAwait(_awaitContextId3, (await (_awaitContextId3 = _dbux.preAwait(11, Promise.all(...args)))));
    } finally {
      _dbux.popImmediate(_contextId7);
    }
  }

  (async function main() {
    const _contextId8 = _dbux.pushImmediate(12);

    try {
      var _awaitContextId4, _awaitContextId5;

      _dbux.postAwait(_awaitContextId4, (await (_awaitContextId4 = _dbux.preAwait(13, f1()))));

      _dbux.postAwait(_awaitContextId5, (await (_awaitContextId5 = _dbux.preAwait(14, f4(f2, f3, sleep.bind(null, 400))))));
    } finally {
      _dbux.popImmediate(_contextId8);
    }
  })();
} finally {
  _dbux.popProgram();
}

function _dbux_init(dbuxRuntime) {
  return dbuxRuntime.initProgram({
    \\"fileName\\": \\"await1.js\\",
    \\"filePath\\": \\"samples/__samplesInput__/await1.js\\",
    \\"staticContexts\\": [null, {
      \\"staticId\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 24,
          \\"column\\": 5
        }
      },
      \\"type\\": 1,
      \\"name\\": \\"Program\\",
      \\"displayName\\": \\"Program\\"
    }, {
      \\"staticId\\": 2,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 3,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"sleep\\",
      \\"displayName\\": \\"sleep\\"
    }, {
      \\"staticId\\": 3,
      \\"parent\\": 2,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 2,
          \\"column\\": 21
        },
        \\"end\\": {
          \\"line\\": 2,
          \\"column\\": 43
        }
      },
      \\"type\\": 2,
      \\"displayName\\": \\"(anonymous)\\"
    }, {
      \\"staticId\\": 4,
      \\"parent\\": 3,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 2,
          \\"column\\": 37
        },
        \\"end\\": {
          \\"line\\": 2,
          \\"column\\": 38
        },
        \\"identifierName\\": \\"r\\"
      },
      \\"type\\": 3,
      \\"displayName\\": \\"(r)\\"
    }, {
      \\"staticId\\": 5,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 5,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 7,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f1\\",
      \\"displayName\\": \\"f1\\"
    }, {
      \\"staticId\\": 6,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 9,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 11,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f2\\",
      \\"displayName\\": \\"f2\\"
    }, {
      \\"staticId\\": 7,
      \\"parent\\": 6,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 10,
          \\"column\\": 2
        },
        \\"end\\": {
          \\"line\\": 10,
          \\"column\\": 17
        }
      },
      \\"type\\": 4,
      \\"displayName\\": \\"(await sleep(50))\\"
    }, {
      \\"staticId\\": 8,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 13,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 15,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f3\\",
      \\"displayName\\": \\"f3\\"
    }, {
      \\"staticId\\": 9,
      \\"parent\\": 8,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 14,
          \\"column\\": 2
        },
        \\"end\\": {
          \\"line\\": 14,
          \\"column\\": 18
        }
      },
      \\"type\\": 4,
      \\"displayName\\": \\"(await sleep(200))\\"
    }, {
      \\"staticId\\": 10,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 17,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 19,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f4\\",
      \\"displayName\\": \\"f4\\"
    }, {
      \\"staticId\\": 11,
      \\"parent\\": 10,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 18,
          \\"column\\": 2
        },
        \\"end\\": {
          \\"line\\": 18,
          \\"column\\": 28
        }
      },
      \\"type\\": 4,
      \\"displayName\\": \\"(await Promise.all(...args))\\"
    }, {
      \\"staticId\\": 12,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 21,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 24,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"main\\",
      \\"displayName\\": \\"main\\"
    }, {
      \\"staticId\\": 13,
      \\"parent\\": 12,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 22,
          \\"column\\": 2
        },
        \\"end\\": {
          \\"line\\": 22,
          \\"column\\": 12
        }
      },
      \\"type\\": 4,
      \\"displayName\\": \\"(await f1())\\"
    }, {
      \\"staticId\\": 14,
      \\"parent\\": 12,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 23,
          \\"column\\": 2
        },
        \\"end\\": {
          \\"line\\": 23,
          \\"column\\": 41
        }
      },
      \\"type\\": 4,
      \\"displayName\\": \\"(await f4(f2, f3, sleep.bind...)\\"
    }]
  });
}
"
`;

exports[`dbux-babel-plugin example1.es5.js: example1.es5.js 1`] = `
"
function f1(x,y) {
}

class A {
  constructor() {
    this.m = new Map();
    this.s = new Set();
  }

  getX() {}
}

const f2 = (z,w) => {};

export {
  f1,
  A,
  f2
}

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

require(\\"core-js/modules/es.array.iterator\\");

require(\\"core-js/modules/es.map\\");

require(\\"core-js/modules/es.object.to-string\\");

require(\\"core-js/modules/es.set\\");

require(\\"core-js/modules/es.string.iterator\\");

require(\\"core-js/modules/web.dom-collections.iterator\\");

exports.__esModule = true;
exports.f2 = exports.A = exports.f1 = void 0;

var _dbuxRuntime = require('dbux-runtime')[\\"default\\"];

var _dbux = _dbux_init(_dbuxRuntime);

var _contextId = _dbux.getProgramContextId();

var _f, _A, _f2;

exports.f2 = _f2;
exports.A = _A;
exports.f1 = _f;

try {
  var f1 = function f1(x, y) {
    var _contextId2 = _dbux.pushImmediate(2);

    try {} finally {
      _dbux.popImmediate(_contextId2);
    }
  };

  var A =
  /*#__PURE__*/
  function () {
    function A() {
      var _contextId3 = _dbux.pushImmediate(3);

      try {
        this.m = new Map();
        this.s = new Set();
      } finally {
        _dbux.popImmediate(_contextId3);
      }
    }

    var _proto = A.prototype;

    _proto.getX = function getX() {
      var _contextId4 = _dbux.pushImmediate(4);

      try {} finally {
        _dbux.popImmediate(_contextId4);
      }
    };

    return A;
  }();

  var f2 = function f2(z, w) {
    var _contextId5 = _dbux.pushImmediate(5);

    try {} finally {
      _dbux.popImmediate(_contextId5);
    }
  };

  exports.f1 = _f = f1;
  exports.A = _A = A;
  exports.f2 = _f2 = f2;
} finally {
  _dbux.popProgram();
}

function _dbux_init(dbuxRuntime) {
  return dbuxRuntime.initProgram({
    \\"fileName\\": \\"example1.js\\",
    \\"filePath\\": \\"samples/__samplesInput__/example1.js\\",
    \\"staticContexts\\": [null, {
      \\"staticId\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 19,
          \\"column\\": 1
        }
      },
      \\"type\\": 1,
      \\"name\\": \\"Program\\",
      \\"displayName\\": \\"Program\\"
    }, {
      \\"staticId\\": 2,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 2,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f1\\",
      \\"displayName\\": \\"f1\\"
    }, {
      \\"staticId\\": 3,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 5,
          \\"column\\": 2
        },
        \\"end\\": {
          \\"line\\": 8,
          \\"column\\": 3
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"constructor\\",
      \\"displayName\\": \\"A.constructor\\"
    }, {
      \\"staticId\\": 4,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 10,
          \\"column\\": 2
        },
        \\"end\\": {
          \\"line\\": 10,
          \\"column\\": 11
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"getX\\",
      \\"displayName\\": \\"A.getX\\"
    }, {
      \\"staticId\\": 5,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 13,
          \\"column\\": 11
        },
        \\"end\\": {
          \\"line\\": 13,
          \\"column\\": 22
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f2\\",
      \\"displayName\\": \\"f2\\"
    }]
  });
}
"
`;

exports[`dbux-babel-plugin example1.esNext.js: example1.esNext.js 1`] = `
"
function f1(x,y) {
}

class A {
  constructor() {
    this.m = new Map();
    this.s = new Set();
  }

  getX() {}
}

const f2 = (z,w) => {};

export {
  f1,
  A,
  f2
}

      ↓ ↓ ↓ ↓ ↓ ↓

const _dbuxRuntime = require('dbux-runtime').default;

const _dbux = _dbux_init(_dbuxRuntime);

const _contextId = _dbux.getProgramContextId();

let _f, _A, _f2;

try {
  function f1(x, y) {
    const _contextId2 = _dbux.pushImmediate(2);

    try {} finally {
      _dbux.popImmediate(_contextId2);
    }
  }

  class A {
    constructor() {
      const _contextId3 = _dbux.pushImmediate(3);

      try {
        this.m = new Map();
        this.s = new Set();
      } finally {
        _dbux.popImmediate(_contextId3);
      }
    }

    getX() {
      const _contextId4 = _dbux.pushImmediate(4);

      try {} finally {
        _dbux.popImmediate(_contextId4);
      }
    }

  }

  const f2 = (z, w) => {
    const _contextId5 = _dbux.pushImmediate(5);

    try {} finally {
      _dbux.popImmediate(_contextId5);
    }
  };

  _f = f1;
  _A = A;
  _f2 = f2;
} finally {
  _dbux.popProgram();
}

export { _f as f1, _A as A, _f2 as f2 };

function _dbux_init(dbuxRuntime) {
  return dbuxRuntime.initProgram({
    \\"fileName\\": \\"example1.js\\",
    \\"filePath\\": \\"samples/__samplesInput__/example1.js\\",
    \\"staticContexts\\": [null, {
      \\"staticId\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 19,
          \\"column\\": 1
        }
      },
      \\"type\\": 1,
      \\"name\\": \\"Program\\",
      \\"displayName\\": \\"Program\\"
    }, {
      \\"staticId\\": 2,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 2,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f1\\",
      \\"displayName\\": \\"f1\\"
    }, {
      \\"staticId\\": 3,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 5,
          \\"column\\": 2
        },
        \\"end\\": {
          \\"line\\": 8,
          \\"column\\": 3
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"constructor\\",
      \\"displayName\\": \\"A.constructor\\"
    }, {
      \\"staticId\\": 4,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 10,
          \\"column\\": 2
        },
        \\"end\\": {
          \\"line\\": 10,
          \\"column\\": 11
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"getX\\",
      \\"displayName\\": \\"A.getX\\"
    }, {
      \\"staticId\\": 5,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 13,
          \\"column\\": 11
        },
        \\"end\\": {
          \\"line\\": 13,
          \\"column\\": 22
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f2\\",
      \\"displayName\\": \\"f2\\"
    }]
  });
}
"
`;

exports[`dbux-babel-plugin example2.es5.js: example2.es5.js 1`] = `
"
import { A } from './example1';

(function main() {
  console.log(new A());
})();

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _example = require(\\"./example1\\");

var _dbuxRuntime = require('dbux-runtime')[\\"default\\"];

var _dbux = _dbux_init(_dbuxRuntime);

var _contextId = _dbux.getProgramContextId();

try {
  (function main() {
    var _contextId2 = _dbux.pushImmediate(2);

    try {
      console.log(new _example.A());
    } finally {
      _dbux.popImmediate(_contextId2);
    }
  })();
} finally {
  _dbux.popProgram();
}

function _dbux_init(dbuxRuntime) {
  return dbuxRuntime.initProgram({
    \\"fileName\\": \\"example2.js\\",
    \\"filePath\\": \\"samples/__samplesInput__/example2.js\\",
    \\"staticContexts\\": [null, {
      \\"staticId\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 5,
          \\"column\\": 5
        }
      },
      \\"type\\": 1,
      \\"name\\": \\"Program\\",
      \\"displayName\\": \\"Program\\"
    }, {
      \\"staticId\\": 2,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 3,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 5,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"main\\",
      \\"displayName\\": \\"main\\"
    }]
  });
}
"
`;

exports[`dbux-babel-plugin example2.esNext.js: example2.esNext.js 1`] = `
"
import { A } from './example1';

(function main() {
  console.log(new A());
})();

      ↓ ↓ ↓ ↓ ↓ ↓

import { A } from './example1';

const _dbuxRuntime = require('dbux-runtime').default;

const _dbux = _dbux_init(_dbuxRuntime);

const _contextId = _dbux.getProgramContextId();

try {
  (function main() {
    const _contextId2 = _dbux.pushImmediate(2);

    try {
      console.log(new A());
    } finally {
      _dbux.popImmediate(_contextId2);
    }
  })();
} finally {
  _dbux.popProgram();
}

function _dbux_init(dbuxRuntime) {
  return dbuxRuntime.initProgram({
    \\"fileName\\": \\"example2.js\\",
    \\"filePath\\": \\"samples/__samplesInput__/example2.js\\",
    \\"staticContexts\\": [null, {
      \\"staticId\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 5,
          \\"column\\": 5
        }
      },
      \\"type\\": 1,
      \\"name\\": \\"Program\\",
      \\"displayName\\": \\"Program\\"
    }, {
      \\"staticId\\": 2,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 3,
          \\"column\\": 1
        },
        \\"end\\": {
          \\"line\\": 5,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"main\\",
      \\"displayName\\": \\"main\\"
    }]
  });
}
"
`;

exports[`dbux-babel-plugin example3.es5.js: example3.es5.js 1`] = `
"
function f1() {

}

function f2() {
  f1();
  f1();
}


f2();

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _dbuxRuntime = require('dbux-runtime')[\\"default\\"];

var _dbux = _dbux_init(_dbuxRuntime);

var _contextId = _dbux.getProgramContextId();

try {
  var f1 = function f1() {
    var _contextId2 = _dbux.pushImmediate(2);

    try {} finally {
      _dbux.popImmediate(_contextId2);
    }
  };

  var f2 = function f2() {
    var _contextId3 = _dbux.pushImmediate(3);

    try {
      f1();
      f1();
    } finally {
      _dbux.popImmediate(_contextId3);
    }
  };

  f2();
} finally {
  _dbux.popProgram();
}

function _dbux_init(dbuxRuntime) {
  return dbuxRuntime.initProgram({
    \\"fileName\\": \\"example3.js\\",
    \\"filePath\\": \\"samples/__samplesInput__/example3.js\\",
    \\"staticContexts\\": [null, {
      \\"staticId\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 11,
          \\"column\\": 5
        }
      },
      \\"type\\": 1,
      \\"name\\": \\"Program\\",
      \\"displayName\\": \\"Program\\"
    }, {
      \\"staticId\\": 2,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 3,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f1\\",
      \\"displayName\\": \\"f1\\"
    }, {
      \\"staticId\\": 3,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 5,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 8,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f2\\",
      \\"displayName\\": \\"f2\\"
    }]
  });
}
"
`;

exports[`dbux-babel-plugin example3.esNext.js: example3.esNext.js 1`] = `
"
function f1() {

}

function f2() {
  f1();
  f1();
}


f2();

      ↓ ↓ ↓ ↓ ↓ ↓

const _dbuxRuntime = require('dbux-runtime').default;

const _dbux = _dbux_init(_dbuxRuntime);

const _contextId = _dbux.getProgramContextId();

try {
  function f1() {
    const _contextId2 = _dbux.pushImmediate(2);

    try {} finally {
      _dbux.popImmediate(_contextId2);
    }
  }

  function f2() {
    const _contextId3 = _dbux.pushImmediate(3);

    try {
      f1();
      f1();
    } finally {
      _dbux.popImmediate(_contextId3);
    }
  }

  f2();
} finally {
  _dbux.popProgram();
}

function _dbux_init(dbuxRuntime) {
  return dbuxRuntime.initProgram({
    \\"fileName\\": \\"example3.js\\",
    \\"filePath\\": \\"samples/__samplesInput__/example3.js\\",
    \\"staticContexts\\": [null, {
      \\"staticId\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 11,
          \\"column\\": 5
        }
      },
      \\"type\\": 1,
      \\"name\\": \\"Program\\",
      \\"displayName\\": \\"Program\\"
    }, {
      \\"staticId\\": 2,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 3,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f1\\",
      \\"displayName\\": \\"f1\\"
    }, {
      \\"staticId\\": 3,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 5,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 8,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f2\\",
      \\"displayName\\": \\"f2\\"
    }]
  });
}
"
`;

exports[`dbux-babel-plugin setTimeout1.es5.js: setTimeout1.es5.js 1`] = `
"
function f1(a, b) {
  setTimeout(function f2() {
    setTimeout(f3, 300);
  });
}

function f3() {
  f4(1, (...args) => console.log(...args), 2, () => {});
}

function f4(a, cb, b, cb2) {
  cb(a, b);
  cb2();
}

// go!
setTimeout(f1.bind(null, 83, 84));

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

require(\\"core-js/modules/es.function.bind\\");

require(\\"core-js/modules/web.timers\\");

var _dbuxRuntime = require('dbux-runtime')[\\"default\\"];

var _dbux = _dbux_init(_dbuxRuntime);

var _contextId = _dbux.getProgramContextId();

try {
  var f1 = function f1(a, b) {
    var _contextId2 = _dbux.pushImmediate(2);

    try {
      setTimeout(_dbux.scheduleCallback(3, _contextId2, function f2() {
        var _contextId3 = _dbux.pushImmediate(4);

        try {
          setTimeout(_dbux.scheduleCallback(5, _contextId3, f3), 300);
        } finally {
          _dbux.popImmediate(_contextId3);
        }
      }));
    } finally {
      _dbux.popImmediate(_contextId2);
    }
  };

  var f3 = function f3() {
    var _contextId4 = _dbux.pushImmediate(6);

    try {
      f4(1, _dbux.scheduleCallback(7, _contextId4, function () {
        var _contextId5 = _dbux.pushImmediate(9);

        try {
          var _console;

          return (_console = console).log.apply(_console, arguments);
        } finally {
          _dbux.popImmediate(_contextId5);
        }
      }), 2, _dbux.scheduleCallback(8, _contextId4, function () {
        var _contextId6 = _dbux.pushImmediate(10);

        try {} finally {
          _dbux.popImmediate(_contextId6);
        }
      }));
    } finally {
      _dbux.popImmediate(_contextId4);
    }
  };

  var f4 = function f4(a, cb, b, cb2) {
    var _contextId7 = _dbux.pushImmediate(11);

    try {
      cb(a, b);
      cb2();
    } finally {
      _dbux.popImmediate(_contextId7);
    }
  }; // go!


  setTimeout(_dbux.scheduleCallback(12, _contextId, f1.bind(null, 83, 84)));
} finally {
  _dbux.popProgram();
}

function _dbux_init(dbuxRuntime) {
  return dbuxRuntime.initProgram({
    \\"fileName\\": \\"setTimeout1.js\\",
    \\"filePath\\": \\"samples/__samplesInput__/setTimeout1.js\\",
    \\"staticContexts\\": [null, {
      \\"staticId\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 17,
          \\"column\\": 34
        }
      },
      \\"type\\": 1,
      \\"name\\": \\"Program\\",
      \\"displayName\\": \\"Program\\"
    }, {
      \\"staticId\\": 2,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 5,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f1\\",
      \\"displayName\\": \\"f1\\"
    }, {
      \\"staticId\\": 3,
      \\"parent\\": 2,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 2,
          \\"column\\": 13
        },
        \\"end\\": {
          \\"line\\": 4,
          \\"column\\": 3
        }
      },
      \\"type\\": 3,
      \\"displayName\\": \\"(function f2() {  setTimeou...)\\"
    }, {
      \\"staticId\\": 4,
      \\"parent\\": 3,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 2,
          \\"column\\": 13
        },
        \\"end\\": {
          \\"line\\": 4,
          \\"column\\": 3
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f2\\",
      \\"displayName\\": \\"f2\\"
    }, {
      \\"staticId\\": 5,
      \\"parent\\": 4,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 3,
          \\"column\\": 15
        },
        \\"end\\": {
          \\"line\\": 3,
          \\"column\\": 17
        },
        \\"identifierName\\": \\"f3\\"
      },
      \\"type\\": 3,
      \\"displayName\\": \\"(f3)\\"
    }, {
      \\"staticId\\": 6,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 7,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 9,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f3\\",
      \\"displayName\\": \\"f3\\"
    }, {
      \\"staticId\\": 7,
      \\"parent\\": 6,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 8,
          \\"column\\": 8
        },
        \\"end\\": {
          \\"line\\": 8,
          \\"column\\": 41
        }
      },
      \\"type\\": 3,
      \\"displayName\\": \\"((...args) => console.log(.....)\\"
    }, {
      \\"staticId\\": 8,
      \\"parent\\": 6,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 8,
          \\"column\\": 46
        },
        \\"end\\": {
          \\"line\\": 8,
          \\"column\\": 54
        }
      },
      \\"type\\": 3,
      \\"displayName\\": \\"(() => {})\\"
    }, {
      \\"staticId\\": 9,
      \\"parent\\": 7,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 8,
          \\"column\\": 8
        },
        \\"end\\": {
          \\"line\\": 8,
          \\"column\\": 41
        }
      },
      \\"type\\": 2,
      \\"displayName\\": \\"(anonymous)\\"
    }, {
      \\"staticId\\": 10,
      \\"parent\\": 8,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 8,
          \\"column\\": 46
        },
        \\"end\\": {
          \\"line\\": 8,
          \\"column\\": 54
        }
      },
      \\"type\\": 2,
      \\"displayName\\": \\"(anonymous)\\"
    }, {
      \\"staticId\\": 11,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 11,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 14,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f4\\",
      \\"displayName\\": \\"f4\\"
    }, {
      \\"staticId\\": 12,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 17,
          \\"column\\": 11
        },
        \\"end\\": {
          \\"line\\": 17,
          \\"column\\": 32
        }
      },
      \\"type\\": 3,
      \\"displayName\\": \\"(f1.bind(null, 83, 84))\\"
    }]
  });
}
"
`;

exports[`dbux-babel-plugin setTimeout1.esNext.js: setTimeout1.esNext.js 1`] = `
"
function f1(a, b) {
  setTimeout(function f2() {
    setTimeout(f3, 300);
  });
}

function f3() {
  f4(1, (...args) => console.log(...args), 2, () => {});
}

function f4(a, cb, b, cb2) {
  cb(a, b);
  cb2();
}

// go!
setTimeout(f1.bind(null, 83, 84));

      ↓ ↓ ↓ ↓ ↓ ↓

const _dbuxRuntime = require('dbux-runtime').default;

const _dbux = _dbux_init(_dbuxRuntime);

const _contextId = _dbux.getProgramContextId();

try {
  function f1(a, b) {
    const _contextId2 = _dbux.pushImmediate(2);

    try {
      setTimeout(_dbux.scheduleCallback(3, _contextId2, function f2() {
        const _contextId3 = _dbux.pushImmediate(4);

        try {
          setTimeout(_dbux.scheduleCallback(5, _contextId3, f3), 300);
        } finally {
          _dbux.popImmediate(_contextId3);
        }
      }));
    } finally {
      _dbux.popImmediate(_contextId2);
    }
  }

  function f3() {
    const _contextId4 = _dbux.pushImmediate(6);

    try {
      f4(1, _dbux.scheduleCallback(7, _contextId4, (...args) => {
        const _contextId5 = _dbux.pushImmediate(9);

        try {
          return console.log(...args);
        } finally {
          _dbux.popImmediate(_contextId5);
        }
      }), 2, _dbux.scheduleCallback(8, _contextId4, () => {
        const _contextId6 = _dbux.pushImmediate(10);

        try {} finally {
          _dbux.popImmediate(_contextId6);
        }
      }));
    } finally {
      _dbux.popImmediate(_contextId4);
    }
  }

  function f4(a, cb, b, cb2) {
    const _contextId7 = _dbux.pushImmediate(11);

    try {
      cb(a, b);
      cb2();
    } finally {
      _dbux.popImmediate(_contextId7);
    }
  } // go!


  setTimeout(_dbux.scheduleCallback(12, _contextId, f1.bind(null, 83, 84)));
} finally {
  _dbux.popProgram();
}

function _dbux_init(dbuxRuntime) {
  return dbuxRuntime.initProgram({
    \\"fileName\\": \\"setTimeout1.js\\",
    \\"filePath\\": \\"samples/__samplesInput__/setTimeout1.js\\",
    \\"staticContexts\\": [null, {
      \\"staticId\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 17,
          \\"column\\": 34
        }
      },
      \\"type\\": 1,
      \\"name\\": \\"Program\\",
      \\"displayName\\": \\"Program\\"
    }, {
      \\"staticId\\": 2,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 1,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 5,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f1\\",
      \\"displayName\\": \\"f1\\"
    }, {
      \\"staticId\\": 3,
      \\"parent\\": 2,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 2,
          \\"column\\": 13
        },
        \\"end\\": {
          \\"line\\": 4,
          \\"column\\": 3
        }
      },
      \\"type\\": 3,
      \\"displayName\\": \\"(function f2() {  setTimeou...)\\"
    }, {
      \\"staticId\\": 4,
      \\"parent\\": 3,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 2,
          \\"column\\": 13
        },
        \\"end\\": {
          \\"line\\": 4,
          \\"column\\": 3
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f2\\",
      \\"displayName\\": \\"f2\\"
    }, {
      \\"staticId\\": 5,
      \\"parent\\": 4,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 3,
          \\"column\\": 15
        },
        \\"end\\": {
          \\"line\\": 3,
          \\"column\\": 17
        },
        \\"identifierName\\": \\"f3\\"
      },
      \\"type\\": 3,
      \\"displayName\\": \\"(f3)\\"
    }, {
      \\"staticId\\": 6,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 7,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 9,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f3\\",
      \\"displayName\\": \\"f3\\"
    }, {
      \\"staticId\\": 7,
      \\"parent\\": 6,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 8,
          \\"column\\": 8
        },
        \\"end\\": {
          \\"line\\": 8,
          \\"column\\": 41
        }
      },
      \\"type\\": 3,
      \\"displayName\\": \\"((...args) => console.log(.....)\\"
    }, {
      \\"staticId\\": 8,
      \\"parent\\": 6,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 8,
          \\"column\\": 46
        },
        \\"end\\": {
          \\"line\\": 8,
          \\"column\\": 54
        }
      },
      \\"type\\": 3,
      \\"displayName\\": \\"(() => {})\\"
    }, {
      \\"staticId\\": 9,
      \\"parent\\": 7,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 8,
          \\"column\\": 8
        },
        \\"end\\": {
          \\"line\\": 8,
          \\"column\\": 41
        }
      },
      \\"type\\": 2,
      \\"displayName\\": \\"(anonymous)\\"
    }, {
      \\"staticId\\": 10,
      \\"parent\\": 8,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 8,
          \\"column\\": 46
        },
        \\"end\\": {
          \\"line\\": 8,
          \\"column\\": 54
        }
      },
      \\"type\\": 2,
      \\"displayName\\": \\"(anonymous)\\"
    }, {
      \\"staticId\\": 11,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 11,
          \\"column\\": 0
        },
        \\"end\\": {
          \\"line\\": 14,
          \\"column\\": 1
        }
      },
      \\"type\\": 2,
      \\"name\\": \\"f4\\",
      \\"displayName\\": \\"f4\\"
    }, {
      \\"staticId\\": 12,
      \\"parent\\": 1,
      \\"loc\\": {
        \\"start\\": {
          \\"line\\": 17,
          \\"column\\": 11
        },
        \\"end\\": {
          \\"line\\": 17,
          \\"column\\": 32
        }
      },
      \\"type\\": 3,
      \\"displayName\\": \\"(f1.bind(null, 83, 84))\\"
    }]
  });
}
"
`;
